Login and Register

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
+body, html, #root {
+  font-family: 'Poppins', sans-serif !important;
+}
+
 .App {
   text-align: center;
 }
